Fixed display issue on smaller screens

--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,8 @@
 
 /* GENERAL STYLING */
 html, body {
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
 }
 *{
     margin: 0;
